styles button css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,106 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin : 0;
-    font-family: 'Open Sans';
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Open Sans";
 }
 
-
-html, body{
-    background-color: black;
+html,
+body {
+  background-color: black;
 }
-.nav-container{
-    height: 80px;
-    background-color: #ff8400;
-    width : 100%;
-    padding: 0 20px;
-    display: flex;
-    align-items: center;
-}
-
-.nav-main{
-    width: 100%;
-    max-width: 900px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    ;
-    
-}
-.nav-main h1{
-    color: #fff;
-    font-size: 36px;;
+.nav-container {
+  height: 80px;
+  background-color: #ff8400;
+  width: 100%;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
 }
 
-.contact-link{
-    color: #fff;
-    cursor: pointer;
+.nav-main {
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav-main h1 {
+  color: #fff;
+  font-size: 36px;
+}
+
+.contact-link {
+  color: #fff;
+  cursor: pointer;
+}
+
+.form-container {
+  padding: 40px 20px;
+  width: 100%;
+}
+
+.card-form {
+  background-color: #333;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  border-radius: 8px;
+  padding: 20px;
+}
+
+.form-control {
+  margin-bottom: 20px;
+}
+
+.form-control label {
+  display: none;
+}
+
+.error-message {
+  margin-top: 5px;
+  color: #faa;
+}
+
+.form-input {
+  height: 50px;
+  width: 100%;
+  border-radius: 4px;
+  padding: 0 20px;
+  font-size: 14px;
+  border: 0;
+}
+
+.form-input::placeholder {
+  color: #c9c9c9;
+}
+
+.form-input:disabled{
+    background-color: #ddd;;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.btn{
+  width: 250px;
+  height: 50px;
+  border: 0;
+  border-radius: 4px;
+  background-color: #ff8400;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.btn-left{
+  margin-right:10px;
+}
+
+.btn-right{
+  margin-right: 10px;
 }
